--- a/data/rush/17913.yaml
+++ b/data/rush/17913.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. Then, send 1 card from your hand to the Graveyard. Then, you can change up to 2 Attack Position monsters on your field to face-up Defense Position.
+    Draw 2 cards. Then, send 1 card from your hand to the Graveyard. Also, you can change up to 2 Attack Position monsters on your field to face-up Defense Position.
   de:
   es:
   fr:
