--- a/data/rush/18336.yaml
+++ b/data/rush/18336.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
   de:
   es:
   fr:
