--- a/data/rush/17402.yaml
+++ b/data/rush/17402.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, increase the Levels of 1 face-up monster on your field and 1 face-up monster on your opponent's field by 2, also they gain 500 ATK.
+    This turn, the Levels of 1 face-up monster on your field and 1 face-up monster on your opponent's field are increased by 2, and they gain 500 ATK.
   de:
   es:
   fr:
