--- a/data/rush/18285.yaml
+++ b/data/rush/18285.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 100 ATK and 1500 DEF, also it cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 100 ATK and 1500 DEF, and it cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
