--- a/data/rush/18378.yaml
+++ b/data/rush/18378.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
+    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Also, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
