--- a/rush.yaml
+++ b/rush.yaml
@@ -42524,7 +42524,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on either side of the field gains 600 ATK until the end of this turn.
+    1 face-up monster on the field gains 600 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -52218,7 +52218,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons or Sets a monster from the hand.
+    When your opponent Normal Summons or Sets a monster from their hand.
   de:
   es:
   fr:
@@ -59978,7 +59978,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, increase the Levels of 1 face-up monster on your field and 1 face-up monster on your opponent's field by 2, also they gain 500 ATK.
+    This turn, the Levels of 1 face-up monster on your field and 1 face-up monster on your opponent's field are increased by 2, and they gain 500 ATK.
   de:
   es:
   fr:
@@ -63257,7 +63257,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if the chosen monster is a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if the chosen monster is a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
@@ -66787,7 +66787,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a face-up Galaxy Type monster(s) on your field is destroyed by an opponent's attack or their card effect while you have no other monsters on your field.
+    When a face-up Galaxy Type monster(s) on your field is destroyed by an opponent's attack or their card effect and you have no other monsters on your field.
   de:
   es:
   fr:
@@ -76670,7 +76670,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. Then, send 1 card from your hand to the Graveyard. Then, you can change up to 2 Attack Position monsters on your field to face-up Defense Position.
+    Draw 2 cards. Then, send 1 card from your hand to the Graveyard. Also, you can change up to 2 Attack Position monsters on your field to face-up Defense Position.
   de:
   es:
   fr:
@@ -84317,7 +84317,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 100 ATK and 1500 DEF, also it cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 100 ATK and 1500 DEF, and it cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -85827,7 +85827,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's Spell Card effects.
   de:
   es:
   fr:
@@ -85993,7 +85993,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Neither player can Special Summon Level 7 monsters from the hand or Graveyard. Also, if this card is in Maximum Mode, your opponent cannot Set monsters from the hand.
+    Neither player can Special Summon Level 7 monsters from the hand or Graveyard. Also, if this card is in Maximum Mode, your opponent cannot Set monsters from their hand.
   de:
   es:
   fr:
@@ -86158,7 +86158,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Increase this card's Level by 6, also it cannot be destroyed by your opponent's Trap Card effects.
+    Increase this card's Level by 6, and it cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -87245,7 +87245,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Level 5 or higher Machine Type monster on your field. This turn, that monster cannot be destroyed by your opponent's Trap Card effects. Then, if that monster is LIGHT Attribute, draw 1 card.
+    1 face-up Level 5 or higher Machine Type monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, if that monster is LIGHT Attribute, draw 1 card.
   de:
   es:
   fr:
@@ -89048,7 +89048,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
+    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Also, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -96043,7 +96043,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. This turn, you take no battle damage. Also, if your LP are 3000 or more, take 2000 damage.
+    Send the top card of your Deck to the Graveyard. You take no battle damage this turn. Then, if your LP are 3000 or more, take 2000 damage.
   de:
   es:
   fr:
@@ -99846,7 +99846,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have no monsters in your Graveyard, your opponent cannot Set monsters from the hand, also if this card is in Maximum Mode and your opponent has a face-down Spell/Trap Card on their field, your opponent cannot Set Spell/Trap Cards from the hand.
+    If you have no monsters in your Graveyard, your opponent cannot Set monsters from their hand, also if this card is in Maximum Mode and your opponent has a face-down Spell/Trap Card on their field, your opponent cannot Set Spell/Trap Cards from their hand.
   de:
   es:
   fr:
@@ -100393,7 +100393,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
+    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Also, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -101641,7 +101641,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The attack target cannot be destroyed by that battle. Then, if the attack target is in Maximum Mode, you gain 1000 LP.
+    The attack target cannot be destroyed by that battle. Then, if the attack target is in Maximum Mode, gain 1000 LP.
   de:
   es:
   fr:
@@ -105931,7 +105931,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. Then, if you sent a card from the Deck to the Graveyard, you can send the top 7 cards of your opponent's Deck to the Graveyard.
+    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. If you sent a card from the Deck to the Graveyard, you can send the top 7 cards of your opponent's Deck to the Graveyard.
   de:
   es:
   fr:
@@ -107055,7 +107055,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster(s) from the hand or Graveyard.
+    When your opponent Special Summons a monster(s) from their hand or Graveyard.
   de:
   es:
   fr:
