--- a/data/rush/17000.yaml
+++ b/data/rush/17000.yaml
@@ -31,7 +31,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of monsters on the field] x 300 until the end of this turn.
-    ● Look at all face-down Spell/Trap Cards on your opponent's field and destroy 1 of them.
+    ● Look at all face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them.
   de:
   es:
   fr:
