--- a/data/rush/17208.yaml
+++ b/data/rush/17208.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field gains 300 ATK until the end of this turn. Then, if "Fusion" is in your Graveyard, you can Special Summon 1 "Ether Seeker" from your Graveyard face-up to your field.
+    1 face-up monster on your field gains 300 ATK until the end of this turn. Then, if you have "Fusion" in your Graveyard, you can Special Summon 1 "Ether Seeker" from your Graveyard face-up to your field.
   de:
   es:
   fr:
