--- a/data/rush/17681.yaml
+++ b/data/rush/17681.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up monster on your field gains 200 ATK and your opponent cannot activate Trap Cards when it declares an attack.
+    This turn, 1 face-up monster on your field gains 200 ATK, and your opponent cannot activate Trap Cards when it declares an attack.
   de:
   es:
   fr:
