--- a/data/rush/18266.yaml
+++ b/data/rush/18266.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If your opponent has 6 or more monsters in their Graveyard, this card gains 500 ATK and cannot be destroyed by the effects of your opponent's Level 8 or lower monsters.
+    If your opponent has 6 or more monsters in their Graveyard, this card gains 500 ATK, and cannot be destroyed by the effects of your opponent's Level 8 or lower monsters.
   de:
   es:
   fr:
