--- a/data/rush/18352.yaml
+++ b/data/rush/18352.yaml
@@ -45,7 +45,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have "Cyber Dragon" in your Graveyard, this card gains 2000 DEF and cannot be destroyed by your opponent's monster effects.
+    If you have "Cyber Dragon" in your Graveyard, this card gains 2000 DEF, and cannot be destroyed by your opponent's monster effects.
   de:
   es:
   fr:
