--- a/data/rush/18969.yaml
+++ b/data/rush/18969.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on the field. Then, this turn, this card gains 500 ATK and can attack twice.
+    Destroy 1 Spell/Trap Card on the field. Then, this turn, this card gains 500 ATK, and can attack twice.
   de:
   es:
   fr:
