--- a/data/rush/19098.yaml
+++ b/data/rush/19098.yaml
@@ -44,7 +44,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
+    This card's name becomes "Harpie Ladies", and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
   de:
   es:
   fr:
