--- a/data/rush/yugipedia1024563.yaml
+++ b/data/rush/yugipedia1024563.yaml
@@ -20,19 +20,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示の「彩光のプリマギターナ」または「砕光のエスパレイド」がいる場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, also you take no damage from your opponent's card effects.
+    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, and you take no damage from your opponent's card effects.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドのモンスター１体を選んで破壊する。自分のＬＰが２０００以下の場合、さらにこのターン、自分は戦闘ダメージを受けず、相手の効果ではダメージを受けない。
   ko:
   zh-TW:
   zh-CN:
