--- a/data/cards/47172959.yaml
+++ b/data/cards/47172959.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 "Yubel" monster + 1+ Effect Monsters on the field
-    If this card is Fusion Summoned: You can inflict 500 damage to your opponent for each Fusion Material used for its Summon. You can only use this effect of "Yubel - Das Ewig Liebe Wächter" once per turn. Cannot be destroyed by battle or card effects, also you take no battle damage from battles involving this card. At the end of the Damage Step, if this card battled an opponent's monster: Inflict damage to your opponent equal to that opponent's monster's ATK, and if you do, banish that monster.
+    If this card is Fusion Summoned: You can inflict 500 damage to your opponent for each material used for its Summon. You can only use this effect of "Yubel - Das Ewig Liebe Wächter" once per turn. Cannot be destroyed by battle or card effects, also you take no battle damage from battles involving this card. At the end of the Damage Step, if this card battled an opponent's monster: Inflict damage to your opponent equal to that opponent's monster's ATK, and if you do, banish that monster.
   de:
   es:
   fr:
