--- a/data/rush/16294.yaml
+++ b/data/rush/16294.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at your opponent's hand and send 1 card from it to the Graveyard. Then, if you sent a Level 7 or higher monster to the Graveyard by this effect, gain 1000 LP.
+    Look at your opponent's hand, and send 1 card from it to the Graveyard. Then, if you sent a Level 7 or higher monster to the Graveyard by this effect, gain 1000 LP.
   de:
   es:
   fr:
