--- a/data/rush/16906.yaml
+++ b/data/rush/16906.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This turn, this card gains 900 ATK, and it can make up to 2 attacks on monsters.
+    ● This turn, this card gains 900 ATK, and can make up to 2 attacks on monsters.
     ● This turn, this card can attack twice, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
