--- a/data/rush/18639.yaml
+++ b/data/rush/18639.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, up to 3 face-up EARTH Attribute Machine Type monsters on your field gain 300 ATK and cannot be destroyed by battle.
+    This turn, up to 3 face-up EARTH Attribute Machine Type monsters on your field gain 300 ATK, and cannot be destroyed by battle.
   de:
   es:
   fr:
