--- a/data/rush/18989.yaml
+++ b/data/rush/18989.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards. Then, send 1 or more cards from your hand to the Graveyard. Then, if you have no monsters on your field, you take no battle damage from your opponent's Level 8 or lower monsters' attacks this turn.
+    Draw 3 cards. Then, send 1 or more cards from your hand to the Graveyard. If you have no monsters on your field, you take no battle damage from your opponent's Level 8 or lower monsters' attacks this turn.
   de:
   es:
   fr:
