--- a/data/rush/19310.yaml
+++ b/data/rush/19310.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Level 8 or lower Insect Type monster on your field gains 200 ATK and can make up to 2 attacks on monsters.
+    This turn, 1 face-up Level 8 or lower Insect Type monster on your field gains 200 ATK, and can make up to 2 attacks on monsters.
   de:
   es:
   fr:
