--- a/data/rush/yugipedia1022943.yaml
+++ b/data/rush/yugipedia1022943.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK. If the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK and cannot be destroyed by your opponent's card effects.
+    The equipped monster gains 300 ATK. Also, if the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
