--- a/data/rush/yugipedia1024560.yaml
+++ b/data/rush/yugipedia1024560.yaml
@@ -14,13 +14,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Level 7 LIGHT or DARK Attribute Psychic Type monster with 0 DEF in your hand to your opponent.
+    Reveal 1 Level 7 LIGHT Attribute or DARK Attribute Psychic Type monster with 0 DEF in your hand to your opponent.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（レベル７／光属性・闇属性／サイキック族／守備力０）１体を相手に見せて発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中から１枚を選んで手札に加える。残りのカードを墓地へ送る。このターン、自分はモンスター（オメガサイキック族・サイキック族）でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
