--- a/data/rush/yugipedia1024564.yaml
+++ b/data/rush/yugipedia1024564.yaml
@@ -14,13 +14,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。自分フィールドに表側表示の「砕光のエスパレイド」がいる場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
