--- a/rush.yaml
+++ b/rush.yaml
@@ -28093,7 +28093,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at your opponent's hand and send 1 card from it to the Graveyard. Then, if you sent a Level 7 or higher monster to the Graveyard by this effect, gain 1000 LP.
+    Look at your opponent's hand, and send 1 card from it to the Graveyard. Then, if you sent a Level 7 or higher monster to the Graveyard by this effect, gain 1000 LP.
   de:
   es:
   fr:
@@ -34346,7 +34346,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Level 7 or higher Dinosaur Type monster on your field gains 1500 ATK and cannot be destroyed by your opponent's card effects.
+    This turn, 1 face-up Level 7 or higher Dinosaur Type monster on your field gains 1500 ATK, and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -36238,7 +36238,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send any number of monsters from your field to the Graveyard. If [the total original Levels of those monsters sent to the Graveyard by this effect] is 10 or higher, you can Special Summon 1 Level 8 or lower monster from your Graveyard face-up to your field. It gains 300 ATK until the end of this turn.
+    Send any number of monsters from your field to the Graveyard. Then, if [the total original Levels of those monsters sent to the Graveyard by this effect] is 10 or higher, you can Special Summon 1 Level 8 or lower monster from your Graveyard face-up to your field. It gains 300 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -44937,7 +44937,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This turn, this card gains 900 ATK, and it can make up to 2 attacks on monsters.
+    ● This turn, this card gains 900 ATK, and can make up to 2 attacks on monsters.
     ● This turn, this card can attack twice, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
@@ -50134,7 +50134,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of monsters on the field] x 300 until the end of this turn.
-    ● Look at all face-down Spell/Trap Cards on your opponent's field and destroy 1 of them.
+    ● Look at all face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them.
   de:
   es:
   fr:
@@ -50319,7 +50319,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● Until the end of your opponent's next turn, while this card is face-up, it gains 500 ATK and neither player can Special Summon Level 9 or lower monsters in face-up Attack Position.
+    ● Until the end of your opponent's next turn, while this card is face-up, it gains 500 ATK, and neither player can Special Summon Level 9 or lower monsters in face-up Attack Position.
     ● Change the battle position of 1 monster on the field.
   de:
   es:
@@ -53421,7 +53421,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field gains 300 ATK until the end of this turn. Then, if "Fusion" is in your Graveyard, you can Special Summon 1 "Ether Seeker" from your Graveyard face-up to your field.
+    1 face-up monster on your field gains 300 ATK until the end of this turn. Then, if you have "Fusion" in your Graveyard, you can Special Summon 1 "Ether Seeker" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -58097,7 +58097,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. If your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
+    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. If your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK, and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
   de:
   es:
   fr:
@@ -59538,7 +59538,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Then, change 1 Defense Position monster on your field to face-up Attack Position. Then, if you changed a Normal Monster to face-up Attack Position by this effect, it gains 1000 ATK until the end of this turn.
+    Negate the attack. Then, change 1 Defense Position monster on your field to face-up Attack Position. If you changed a Normal Monster to face-up Attack Position by this effect, it gains 1000 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -68892,7 +68892,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up monster on your field gains 200 ATK and your opponent cannot activate Trap Cards when it declares an attack.
+    This turn, 1 face-up monster on your field gains 200 ATK, and your opponent cannot activate Trap Cards when it declares an attack.
   de:
   es:
   fr:
@@ -77625,7 +77625,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, this turn, this card gains 1500 ATK and your opponent cannot activate Trap Cards when it declares an attack. If the result is tails, change this card to face-up Defense Position.
+    Toss a coin. If the result is heads, this turn, this card gains 1500 ATK, and your opponent cannot activate Trap Cards when it declares an attack. If the result is tails, change this card to face-up Defense Position.
   de:
   es:
   fr:
@@ -82986,7 +82986,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If your opponent has 6 or more monsters in their Graveyard, this card gains 500 ATK and cannot be destroyed by the effects of your opponent's Level 8 or lower monsters.
+    If your opponent has 6 or more monsters in their Graveyard, this card gains 500 ATK, and cannot be destroyed by the effects of your opponent's Level 8 or lower monsters.
   de:
   es:
   fr:
@@ -87085,7 +87085,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you have "Cyber Dragon" in your Graveyard, this card gains 2000 DEF and cannot be destroyed by your opponent's monster effects.
+    If you have "Cyber Dragon" in your Graveyard, this card gains 2000 DEF, and cannot be destroyed by your opponent's monster effects.
   de:
   es:
   fr:
@@ -88892,7 +88892,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card gains 1000 ATK and cannot be destroyed by card effects. Then, if you activated this effect during your Main Phase that you Special Summoned this card, you can add 1 "Dark Hole" from your Graveyard to your hand.
+    This turn, this card gains 1000 ATK, and cannot be destroyed by card effects. Then, if you activated this effect during your Main Phase that you Special Summoned this card, you can add 1 "Dark Hole" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -95580,7 +95580,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, up to 3 face-up EARTH Attribute Machine Type monsters on your field gain 300 ATK and cannot be destroyed by battle.
+    This turn, up to 3 face-up EARTH Attribute Machine Type monsters on your field gain 300 ATK, and cannot be destroyed by battle.
   de:
   es:
   fr:
@@ -105202,7 +105202,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 Spell/Trap Card on the field. Then, this turn, this card gains 500 ATK and can attack twice.
+    Destroy 1 Spell/Trap Card on the field. Then, this turn, this card gains 500 ATK, and can attack twice.
   de:
   es:
   fr:
@@ -106669,7 +106669,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards. Then, send 1 or more cards from your hand to the Graveyard. Then, if you have no monsters on your field, you take no battle damage from your opponent's Level 8 or lower monsters' attacks this turn.
+    Draw 3 cards. Then, send 1 or more cards from your hand to the Graveyard. If you have no monsters on your field, you take no battle damage from your opponent's Level 8 or lower monsters' attacks this turn.
   de:
   es:
   fr:
@@ -106939,7 +106939,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up LIGHT Attribute monster on your field gains ATK equal to [the ATK of that Normal Summoned monster] and cannot be destroyed by your opponent's card effects.
+    This turn, 1 face-up LIGHT Attribute monster on your field gains ATK equal to [that Normal Summoned monster's ATK], and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -107286,7 +107286,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Ladies", and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
   de:
   es:
   fr:
@@ -107466,7 +107466,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
+    This card's name becomes "Harpie Ladies", and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
   de:
   es:
   fr:
@@ -108282,7 +108282,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you activated this effect during your Main Phase that you Special Summoned this card, it gains ATK equal to [the number of monsters sent to the Graveyard to meet the requirement] x 1000 until the end of this turn.
+    This turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if you activated this effect during your Main Phase that you Special Summoned this card, it gains ATK equal to [the number of monsters sent to the Graveyard to meet the requirement] x 1000 until the end of this turn.
   de:
   es:
   fr:
@@ -112824,7 +112824,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Level 8 or lower Insect Type monster on your field gains 200 ATK and can make up to 2 attacks on monsters.
+    This turn, 1 face-up Level 8 or lower Insect Type monster on your field gains 200 ATK, and can make up to 2 attacks on monsters.
   de:
   es:
   fr:
@@ -116307,7 +116307,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at your opponent's hand and send 1 card from it to the Graveyard.
+    Look at your opponent's hand, and send 1 card from it to the Graveyard.
   de:
   es:
   fr:
@@ -117878,7 +117878,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up monster on your field gains 900 ATK and your opponent cannot activate Trap Cards when it declares an attack. Also, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
+    This turn, 1 face-up monster on your field gains 900 ATK, and your opponent cannot activate Trap Cards when it declares an attack. Also, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
   de:
   es:
   fr:
@@ -123069,7 +123069,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 300 ATK. If the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK and cannot be destroyed by your opponent's card effects.
+    The equipped monster gains 300 ATK. Also, if the equipped monster is a non-Effect Fusion Monster, it gains additional 700 ATK and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -124430,13 +124430,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Level 7 LIGHT or DARK Attribute Psychic Type monster with 0 DEF in your hand to your opponent.
+    Reveal 1 Level 7 LIGHT Attribute or DARK Attribute Psychic Type monster with 0 DEF in your hand to your opponent.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（レベル７／光属性・闇属性／サイキック族／守備力０）１体を相手に見せて発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124448,7 +124449,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中から１枚を選んで手札に加える。残りのカードを墓地へ送る。このターン、自分はモンスター（オメガサイキック族・サイキック族）でしか攻撃できない。
   ko:
   zh-TW:
   zh-CN:
@@ -124494,19 +124496,21 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示の「彩光のプリマギターナ」または「砕光のエスパレイド」がいる場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, also you take no damage from your opponent's card effects.
+    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, and you take no damage from your opponent's card effects.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドのモンスター１体を選んで破壊する。自分のＬＰが２０００以下の場合、さらにこのターン、自分は戦闘ダメージを受けず、相手の効果ではダメージを受けない。
   ko:
   zh-TW:
   zh-CN:
@@ -124546,13 +124550,14 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124564,7 +124569,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。自分フィールドに表側表示の「砕光のエスパレイド」がいる場合、さらに相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
