--- a/data/rush/18340.yaml
+++ b/data/rush/18340.yaml
@@ -45,7 +45,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Increase this card's Level by 6, and it cannot be destroyed by your opponent's Trap Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects, and its Level is increased by 6.
   de:
   es:
   fr:
