--- a/data/rush/18639.yaml
+++ b/data/rush/18639.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up while you have a face-up Level 7 or higher EARTH Attribute Machine Type monster on your field.
   de:
   es:
   fr:
