--- a/data/rush/19341.yaml
+++ b/data/rush/19341.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons an Effect Monster(s) face-up.
+    When your opponent Normal or Special Summons an Effect Monster face-up.
   de:
   es:
   fr:
