--- a/data/rush/19551.yaml
+++ b/data/rush/19551.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this face-up card and the monsters Special Summoned by this effect can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position this turn.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can Special Summon 2 "Straynge Cat" from your Graveyard face-up to your field. If you Special Summoned by this effect, this turn, this face-up card and the monsters Special Summoned by this effect can be treated as 2 Tributes for the Tribute Summon of a monster in Attack Position.
   de:
   es:
   fr:
