--- a/data/cards/80678380.yaml
+++ b/data/cards/80678380.yaml
@@ -37,7 +37,11 @@ card_type: Trap
 property: Counter
 images:
 - index: 1
-  image: SnakeDeitysCommand-TAEV-EN-R-1E.jpg
+  image: SnakeDeitysCommand-TAEV-JP-R.jpg
+  illustration: SnakeDeitysCommand-MADU-JP-VG-artwork.png
+- index: '1.1'
+  image: SnakeDeitysCommand-TAEV-EN-R-UE.jpg
+  illustration: SnakeDeitysCommand-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: TAEV-EN068
