--- a/data/rush/16367.yaml
+++ b/data/rush/16367.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 6 or higher monster(s) face-up while you have "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster face-up on your field.
+    When your opponent Normal or Special Summons a Level 6 or higher monster face-up while you have "Summoned Skull" or a Level 7 or higher Fiend Type Normal Monster face-up on your field.
   de:
   es:
   fr:
