--- a/data/rush/17402.yaml
+++ b/data/rush/17402.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, the Levels of 1 face-up monster on your field and 1 face-up monster on your opponent's field are increased by 2, and they gain 500 ATK.
+    This turn, 1 face-up monster on your field and 1 face-up monster on your opponent's field gain 500 ATK, and their Levels are increased by 2.
   de:
   es:
   fr:
