--- a/data/rush/17697.yaml
+++ b/data/rush/17697.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up.
   de:
   es:
   fr:
