--- a/data/rush/18992.yaml
+++ b/data/rush/18992.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, send 1 monster from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, send 1 monster from your field to the Graveyard.
   de:
   es:
   fr:
