--- a/data/rush/18994.yaml
+++ b/data/rush/18994.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 8 or lower monster(s) face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
+    When your opponent Normal or Special Summons a Level 8 or lower monster face-up, shuffle 3 LIGHT Attribute Spellcaster Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
