--- a/data/rush/19136.yaml
+++ b/data/rush/19136.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 7 or higher monster(s) face-up, send all monsters from your field to the Graveyard.
+    When your opponent Normal or Special Summons a Level 7 or higher monster face-up, send all monsters from your field to the Graveyard.
   de:
   es:
   fr:
